update button and typeface

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,6 +58,11 @@
   font-weight: normal;
 }
 
+@font-face {
+  font-family: 'rocknrollone';
+  src: url('/RocknRollOne-Regular.ttf');
+}
+
 body {
   min-height: 100vh;
   color: var(--color-text);
@@ -67,6 +72,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+  'rocknrollone',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
