--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,7 +62,17 @@
   font-family: 'rocknrollone';
   src: url('/RocknRollOne-Regular.ttf');
 }
-
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 body {
   min-height: 100vh;
   color: var(--color-text);
